--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -2,5 +2,5 @@
 $text-color: #ffffff;
 $bg-color: #101010;
 $secondary-bg-color: #080808;
-$accent-color: #556FF8;
+$accent-color: #556ff8;
 $card-bg-color: rgba(255, 255, 255, 0.18);
