--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@import "vars";
+@import "../../styles/vars";
 
 .header {
   padding: 44px 0 ;
@@ -13,7 +13,8 @@
 .link {
   color: $text-color;
   cursor: pointer;
-  .active, &:hover, &:focus {
+  &:hover, &:focus {
     color: $accent-color;
   }
 }
+.active {color: $accent-color;}
