--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,10 +2,20 @@
 
 //main
 body {
+  margin: 0;
+  padding: 0;
   color: $text-color;
   background-color: $bg-color;
-}
 
+}
+.body-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+main {
+  flex-grow: 1;
+}
 .container {
   margin: 0 auto;
   padding: 0 10px;
