--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -4,10 +4,13 @@
   position: relative;
   padding: 150px 0 176px;
   background: url('/images/hero.webp');
-  background-size: auto 1215px;
-  background-position: center right;
+  background-size: auto 960px;
+  background-position:  right 0;
   background-repeat: no-repeat;
-
+  @media screen and (min-width: 1600px){
+    background-size: auto 1200px;
+    background-position:  right center;
+  }
   &::before {
     content: '';
     position: absolute;
