--- a/src/components/BonusDetails/BonusDetails.module.scss
+++ b/src/components/BonusDetails/BonusDetails.module.scss
@@ -17,6 +17,7 @@
     column-gap: 12px;
     align-items: center;
     text-align: center;
+    overflow: hidden;
   }
   & span:nth-child(-n+2) {
     text-align: left;
